Handle parent folder selection on Folder creation
MAILAND-2298

--- a/app/src/main/res/layout/activity_labels_manager.xml
+++ b/app/src/main/res/layout/activity_labels_manager.xml
@@ -86,7 +86,7 @@
                     android:textAppearance="@style/Proton.Text.Default"
                     android:visibility="gone"
                     tools:visibility="visible"
-                    tools:text="@string/labels_manager_select_parent_folder"/>
+                    android:text="@string/labels_manager_select_parent_folder"/>
 
                 <View style="@style/ViewSeparatorHorizontal"/>
 
