--- a/app/src/main/res/layout/dialog_recipient_expiration_unsupported.xml
+++ b/app/src/main/res/layout/dialog_recipient_expiration_unsupported.xml
@@ -82,7 +82,7 @@
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@string/expiration_error_add_msg_password"
-                    android:textColor="@color/rain_gray"
+                    android:textColor="@color/text_weak"
                     android:textSize="@dimen/h3"
                     app:fontName="Roboto-Regular.ttf" />
 
@@ -93,7 +93,7 @@
                     android:layout_gravity="center_vertical"
                     android:background="@null"
                     android:src="@drawable/ic_keyboard_arrow_down"
-                    android:tint="@color/switch_background" />
+                    app:tint="@color/icon_weak" />
 
             </LinearLayout>
 
@@ -119,7 +119,7 @@
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@string/expiration_error_disable_pgp_sending"
-                    android:textColor="@color/rain_gray"
+                    android:textColor="@color/text_weak"
                     android:textSize="@dimen/h3"
                     app:fontName="Roboto-Regular.ttf" />
 
@@ -130,7 +130,7 @@
                     android:layout_gravity="center_vertical"
                     android:background="@null"
                     android:src="@drawable/ic_keyboard_arrow_down"
-                    android:tint="@color/switch_background" />
+                    app:tint="@color/icon_weak" />
 
             </LinearLayout>
 
