Rename duplicated strings ( `none` and `done` )
Strings for "None" and "Done" has been added using the agreed pattern
with `x_` prefix, but a format without a prefix was already present in
the project, so we renamed them in order to avoid unneeded translations

MAILAND-2298

--- a/app/src/main/res/layout/view_action_sheet_header.xml
+++ b/app/src/main/res/layout/view_action_sheet_header.xml
@@ -91,7 +91,7 @@
         android:paddingStart="@dimen/padding_l"
         android:paddingTop="@dimen/padding_l"
         android:paddingBottom="@dimen/padding_l"
-        android:text="@string/done"
+        android:text="@string/x_done"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
