--- a/app/src/main/res/layout/labels_list_item.xml
+++ b/app/src/main/res/layout/labels_list_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -25,29 +25,29 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:paddingBottom="@dimen/padding_l">
 
     <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/label_check"
+        android:id="@+id/label_check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/padding_m"
         android:minWidth="0dp"
         android:minHeight="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/label_color"
+        app:layout_constraintEnd_toStartOf="@id/label_icon_image_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/label_color"
+        android:id="@+id/label_icon_image_view"
         android:layout_width="@dimen/padding_l"
         android:layout_height="@dimen/padding_l"
         android:src="@drawable/circle_labels_selection"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/label_name"
-        app:layout_constraintStart_toEndOf="@id/label_check"
+        app:layout_constraintEnd_toStartOf="@id/label_name_text_view"
+        app:layout_constraintStart_toEndOf="@id/label_check_box"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/label_name"
+        android:id="@+id/label_name_text_view"
         style="@style/Proton.Text.Default"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -57,11 +57,11 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:gravity="start|center"
         android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/label_color"
+        app:layout_constraintStart_toEndOf="@id/label_icon_image_view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/label_edit"
+        android:id="@+id/label_edit_image_button"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginStart="@dimen/padding_m"
@@ -69,4 +69,5 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
