--- a/app/src/main/res/layout/dialog_labels_list_item.xml
+++ b/app/src/main/res/layout/dialog_labels_list_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,7 +25,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:paddingBottom="@dimen/fields_default_space_small">
 
     <TextView
-        android:id="@+id/label_name"
+        android:id="@+id/label_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/label_background"
@@ -48,18 +48,18 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/label_check"
+        android:layout_toStartOf="@id/label_check_box"
         android:paddingEnd="8dp"
         android:textColor="@color/icon_purple"
         android:textSize="@dimen/h2"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/label_check"
+        app:layout_constraintRight_toLeftOf="@+id/label_check_box"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="22" />
 
 
     <ch.protonmail.android.views.ThreeStateButton
-        android:id="@+id/label_check"
+        android:id="@+id/label_check_box"
         android:layout_width="@dimen/custom_check_box_size"
         android:layout_height="@dimen/custom_check_box_size"
         android:layout_marginStart="10dp"
