--- a/app/src/main/res/layout/nav_item_label.xml
+++ b/app/src/main/res/layout/nav_item_label.xml
@@ -45,7 +45,7 @@
 		tools:tint="#d50000"/>
 
 	<TextView
-		android:id="@+id/label_name"
+		android:id="@+id/label_name_text_view"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="8dp"
