Remove Done button from ThemeChooserActivity.kt
MAILAND-2657

--- a/app/src/main/res/layout/activity_theme_chooser.xml
+++ b/app/src/main/res/layout/activity_theme_chooser.xml
@@ -31,8 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/app_theme_title"
-        app:menu="@menu/menu_app_theme"/>
+        app:title="@string/app_theme_title"/>
 
     <RadioGroup
         android:id="@+id/app_theme_radio_group"
