Update the side menu to use the appropriate colors from core
MAILAND-2658

--- a/app/src/main/res/layout/drawer_footer.xml
+++ b/app/src/main/res/layout/drawer_footer.xml
@@ -22,6 +22,6 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/height_drawer_footer"
     android:textAppearance="@style/Proton.Text.Caption"
-    android:textColor="@color/text_weak"
+    android:textColor="?attr/proton_sidebar_text_weak"
     android:gravity="center"
     tools:text="ProtonMail 1.2.3 (123)" />
